update dependencies, user XP